fixed misalignment of number counter

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@
   color: #DC0D29;
   font-size: 35px;
   text-align: center;
-  top: -9px;
+  top: 0px;
 }
 span{
   margin-left:18px;
